--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Voice Message Box" />
-    <title>Voice Message Box</title>
+    <meta name="description" content="Wedding Information" />
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <title>Happily Ever After Party</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
